[gd_scene load_steps=43 format=2]

[ext_resource path="res://sprites/floor.png" type="Texture" id=1]
[ext_resource path="res://sprites/bib.png" type="Texture" id=2]
[ext_resource path="res://sprites/face.png" type="Texture" id=3]
[ext_resource path="res://sprites/dzyndzel.png" type="Texture" id=4]
[ext_resource path="res://sprites/internals.png" type="Texture" id=5]
[ext_resource path="res://sprites/tongue.png" type="Texture" id=6]
[ext_resource path="res://objects/Half.tscn" type="PackedScene" id=7]
[ext_resource path="res://objects/Eye.tscn" type="PackedScene" id=8]
[ext_resource path="res://objects/Cursor.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/Game.gd" type="Script" id=10]
[ext_resource path="res://objects/DrillPickup.tscn" type="PackedScene" id=11]
[ext_resource path="res://objects/ScrewPickup.tscn" type="PackedScene" id=12]
[ext_resource path="res://objects/DriverPickup.tscn" type="PackedScene" id=13]
[ext_resource path="res://fonts/i_want.res" type="DynamicFont" id=14]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 1280, 0, 320, 211 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 1600, 0, 320, 211 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 1920, 0, 320, 211 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 2240, 0, 320, 211 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 320, 211 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 320, 211 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 320, 211 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 960, 0, 320, 211 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "Close",
"speed": 10.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 1.0
} ]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 241, 126 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 241, 0, 241, 126 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 482, 0, 241, 126 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 723, 0, 241, 126 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 241, 126 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "Close",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "Open",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 15, 28 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 15, 0, 15, 28 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 30, 0, 15, 28 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 45, 0, 15, 28 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 102, 28 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 102, 0, 102, 28 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 6 )
region = Rect2( 204, 0, 102, 28 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 6 )
region = Rect2( 306, 0, 102, 28 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
} ]

[sub_resource type="Animation" id=26]
resource_name = "Drill"
tracks/0/type = "value"
tracks/0/path = NodePath("DrillPickup:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 214, 267 ), Vector2( 218, 196 ) ]
}

[sub_resource type="Animation" id=27]
resource_name = "Screw"
tracks/0/type = "value"
tracks/0/path = NodePath("ScrewPickup:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 71, 246 ), Vector2( 71, 201 ) ]
}

[sub_resource type="Animation" id=28]
resource_name = "Driver"
tracks/0/type = "value"
tracks/0/path = NodePath("DriverPickup:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 215, 284 ), Vector2( 214, 204 ) ]
}

[node name="root" type="Node2D"]
script = ExtResource( 10 )

[node name="DrillPickup" parent="." instance=ExtResource( 11 )]
position = Vector2( 214, 267 )
z_index = 10

[node name="EyeR" parent="." instance=ExtResource( 8 )]
position = Vector2( 218, 57 )
z_index = 9
frame = 6

[node name="EyeL" parent="." instance=ExtResource( 8 )]
position = Vector2( 117, 57 )
scale = Vector2( -1, 1 )
z_index = 10
frame = 3

[node name="floor" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="face" type="AnimatedSprite" parent="."]
z_index = 8
frames = SubResource( 9 )
animation = "Idle"
frame = 3
playing = true
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="bib" type="Sprite" parent="."]
position = Vector2( 21.637, 186.971 )
z_index = 1
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="internals" type="AnimatedSprite" parent="."]
position = Vector2( 168, 145 )
frames = SubResource( 15 )
animation = "Open"
__meta__ = {
"_edit_lock_": true
}

[node name="dzyndzel" type="AnimatedSprite" parent="."]
position = Vector2( 166, 131 )
z_index = 2
frames = SubResource( 20 )
frame = 2
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="tongue" type="AnimatedSprite" parent="."]
position = Vector2( 169, 160 )
z_index = 2
frames = SubResource( 25 )
animation = "idle"
frame = 1
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="Bottom" parent="." instance=ExtResource( 7 )]
position = Vector2( 170, 163 )
z_index = 4

[node name="Top" parent="." instance=ExtResource( 7 )]
position = Vector2( 171, 115 )
scale = Vector2( 1, -1 )
z_index = 4

[node name="Cursor" parent="." instance=ExtResource( 9 )]
position = Vector2( 331, 289 )
z_index = 20

[node name="blinkTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="EnterTheDrill" type="AnimationPlayer" parent="."]
anims/Drill = SubResource( 26 )

[node name="EnterTheScrew" type="AnimationPlayer" parent="."]
anims/Screw = SubResource( 27 )

[node name="EnterTheDriver" type="AnimationPlayer" parent="."]
anims/Driver = SubResource( 28 )

[node name="ScrewPickup" parent="." instance=ExtResource( 12 )]
position = Vector2( 71, 246 )
z_index = 10

[node name="DriverPickup" parent="." instance=ExtResource( 13 )]
position = Vector2( 222, 283 )
z_index = 10

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 57.0734
margin_top = 61.514
margin_right = 101.073
margin_bottom = 90.514
rect_scale = Vector2( 5, 5 )
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "YOU DID IT!
3.14 s"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="EyeR" to="." method="_on_EyeR_animation_finished"]
[connection signal="animation_finished" from="EyeL" to="." method="_on_EyeL_animation_finished"]
[connection signal="timeout" from="blinkTimer" to="." method="_on_blinkTimer_timeout"]
